# rlr-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  METHODOLOGY.md  README.md  ROADMAP.md
analysis/: bot-replays.md
assets/replays/bots/: bot1.replay  bot10.replay  bot11.replay  bot12.replay  bot2.replay  bot3.replay  bot4.replay  bot5.replay  bot6.replay  bot7.replay  bot8.replay  bot9.replay
assets/replays/good/: rlcs_mod.replay
src/: boost_analysis.rs  bot_detection.rs  demystify.rs  input_synchrony.rs  kickoff_analysis.rs  main.rs  merkle.rs  parser.rs  rotation_analysis.rs
