[package]
name = "rlr-tools"
authors = ["Calvin Forinash <ctforinash@gmail.com>"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/ctf16/rlr-tools"

[dependencies]
boxcars = "0.10.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha3 = "0.10"
