[package]
name = "rlr-tools"
authors = ["Calvin Forinash <ctforinash@gmail.com>"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/ctf16/rlr-tools"

[dependencies]
base64 = "0.22"
boxcars = "0.10.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
fips204 = "0.4"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha3 = "0.10"
